--- a/handcrafted-haven/src/app/ui/landing-page/ProductType.module.css
+++ b/handcrafted-haven/src/app/ui/landing-page/ProductType.module.css
@@ -38,6 +38,12 @@
   border-radius: 1rem;
 }
 
+.image:hover {
+  transform: scale(1.05);
+  transition: transform 0.2s ease-in-out;
+  cursor: pointer;
+}
+
 .card:nth-child(even) .details {
   order: 2;
 }
