--- a/handcrafted-haven/src/app/ui/landing-page/site-info.module.css
+++ b/handcrafted-haven/src/app/ui/landing-page/site-info.module.css
@@ -34,9 +34,15 @@
   background-color: rgba(255, 255, 255, 0.5);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
-  border: 1px solid rgba(0, 0, 0, 0.05);
+  border: 2px solid rgba(0, 0, 0, 0.05);
   text-decoration: none;
   color: inherit;
+  transition: transform 0.2s ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  cursor: pointer;
 }
 
 .icon {
