--- a/handcrafted-haven/src/app/ui/cart/CartList.module.css
+++ b/handcrafted-haven/src/app/ui/cart/CartList.module.css
@@ -89,6 +89,31 @@
   margin-right: auto;
 }
 
+.buttonsContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.buttonsContainer button {
+  margin: 10px 20px;
+  padding: 8px 16px;
+  background-color: #000;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+  font-family: "Neuton", serif;
+  letter-spacing: 1px;
+}
+
+.buttonsContainer button:hover {
+  background-color: #92aa83;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+}
+
 @media (max-width: 768px) {
   .wrapper {
     padding: 2rem 1rem;
